[fix ux] Make the empire state building flow behind text.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,10 +70,24 @@ a:hover.button {
   padding-top: 25px;
 }
 
-#empire-state {
+.empire-state {
+  display: block;
+  position: relative;
+  height: 900px;
+}
+
+.empire-state::after {
+  background: url(/img/empire-state-cutout.png);
+  background-repeat: no-repeat;
+  background-position: 65% top;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
   position: absolute;
-  left: 420px;
-  top: -20px;
+  z-index: -1;
+  opacity: 1;
+  content: "";
 }
 
 .empire-state-background {
@@ -290,17 +304,17 @@ a:hover.button {
 #synopsis h3 {
   font-weight: 100;
   font-size: 30;
-  padding-top: 5px; 
+  padding-top: 5px;
   padding-bottom: 12px;
   line-height: 120%;
   text-transform: none;
 }
 
 #synopsis h3 a {
-  color: #78ba51; 
+  color: #78ba51;
   font-weight: 100;
   font-size: 30;
-  padding-top: 5px; 
+  padding-top: 5px;
   padding-bottom: 12px;
   line-height: 120%;
   text-transform: none;
@@ -308,10 +322,10 @@ a:hover.button {
 
 #synopsis h3 a:hover {
   text-decoration: underline;
-  color: #78ba51; 
+  color: #78ba51;
   font-weight: 100;
   font-size: 30;
-  padding-top: 5px; 
+  padding-top: 5px;
   padding-bottom: 12px;
   line-height: 120%;
   text-transform: none;
